prevent request that overlaps another

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -162,4 +162,5 @@ input[type=date] {
 
 #request-summary {
   margin-top: 2rem;
+  margin-left: 4rem;
 }
